--- a/index.html
+++ b/index.html
@@ -45,23 +45,17 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Ismael Vizcaya</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
+        <img src="assets/img/mini-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Ismael<br/>Vizcaya Somoza </a></h1>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
-          <li><a href="#skills22:47 13/10/202122:47 13/10/2021" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Habilidades</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Habilidades</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Trayectoria</span></a></li>
+          <li><a href="https://es.linkedin.com/in/ismael-vizcaya-a8723a137" class="nav-link scrollto"><i class="bx bxl-linkedin"></i> <span>Linkedin</span></a></li>
        </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -83,7 +77,6 @@
 
         <div class="section-title">
           <h2>Sobre mi</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -91,30 +84,27 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Programador</h3>
+            
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Algunas de mis cualidades son: responsable, proactivo, capacidad de trabajo en equipo, resolución de problemas, pensamiento abtracto, organizado...
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 de marzo 1994</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span>676 650 103</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Ourense, Galicia</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>isma.verin@gmail.com</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>27 años</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nivel de estudios:</strong> <span>Graduado</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>isma.verin@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Me considero una persona que consigue lo que quiere, con constancia y trabajo. Siempre intento mejorar en mis puntos débiles y evolucionar como persona y como profesional. Suelo tomar la iniciativa en mis proyectos y trabajar de forma autónoma. Mi objetivo profesional es llegar a liderar un equipo de capaz de desarrollar proyectos en conjunto y a gran escala. 
             </p>
           </div>
         </div>
@@ -127,25 +117,33 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Hechos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Logros</h2>
+          <p>Ingeniero informático con cinco años de experiencia como desarrollador. He trabajado en diferentes proyectos, tanto en plataformas de escritorio como web, para empresas de diferentes sectores. La mayoría de los proyectos desarrollados se utilizan a diario en operativas cruciales para empresas, como puede ser un sistema de gestión de stock de almacenes o el control de garantías de productos.</p>
         </div>
 
         <div class="row no-gutters">
 
-          <div class="col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+          <div class="col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Usuarios finales</strong> que utilizan mis proyectos a diario</p>
+              <i class="bi bi-people"></i>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Sectores</strong> de trabajo</p>
             </div>
           </div>
 
-          <div class=" col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class=" col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="34" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Proyectos</strong> en los que he participado</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up">
+            <div class="count-box">
+              <i class="bi bi-emoji-smile"></i>
+              <span data-purecounter-start="0" data-purecounter-end="173" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Usuarios finales</strong> que utilizan mis proyectos a diario</p>
             </div>
           </div>
         </div>
@@ -158,7 +156,7 @@
 
         <div class="section-title">
           <h2>Habilidades</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>En general, me considero una persona autodidacta e interesada en as novedades del sector. Las tecnologías con las que más trabajo actualmente se centran en el ecosistema de Microsoft (Net Framework) y muchos de mis proyectos están relacionados con <a href="https://www.wolterskluwer.com/es-es/solutions/a3erp">a3ERP</a>.</p>
         </div>
 
         <div class="row skills-content">
@@ -166,23 +164,28 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">Avanzado</i></span>
+              <span class="skill">HTML <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">Muy alto</i></span>
+              <span class="skill">CSS <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">Medio</i></span>
+              <span class="skill">JavaScript <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">SQL <i class="val"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -191,23 +194,29 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">Alto</i></span>
+              <span class="skill">PHP <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">c# <i class="val">Muy alto</i></span>
+              <span class="skill">VB/C# <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">net framework <i class="val">Muy alto</i></span>
+              <span class="skill">C/c++ <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Java <i class="val"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
