--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Formación</h3>
             <div class="resume-item">
-              <h4>Grado en ingeriería informmática</h4>
+              <h4>Grado en ingeriería informática</h4>
               <h5>2012 - 2017</h5>
               <p><em>Universidade de vigo, campus de Ourense</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Especialidad en ingeniería de software</p>
             </div>
             <div class="resume-item">
-              <h4>Master en ingeniría de software</h4>
+              <h4>Master en ingeniería de software</h4>
               <h5>2017 - presente</h5>
               <p><em>Universidade de vigo, campus de Ourense</em></p>
               <p>Actualmente sigo cursando este master, dado que lo estoy realizando a tiempo parcial mientras trabajo</p>
