--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Habilidades</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Trayectoria</span></a></li>
-          <li><a href="https://es.linkedin.com/in/ismael-vizcaya-a8723a137" class="nav-link scrollto"><i class="bx bxl-linkedin"></i> <span>Linkedin</span></a></li>
+          <li><a href="https://es.linkedin.com/in/ismael-vizcaya-a8723a137" class="nav-link"><i class="bx bxl-linkedin"></i> <span>Linkedin</span></a></li> 
+	  <li><a href="Portfolio.pdf" class="nav-link"><i class="bx bxl-linkedin"></i> <span>Imprimir</span></a></li>
        </ul>
       </nav><!-- .nav-menu -->
     </div>
