--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             
             <p class="fst-italic">
-              Algunas de mis cualidades son: responsable, proactivo, capacidad de trabajo en equipo, resolución de problemas, pensamiento abtracto, organizado...
+              Algunas de mis cualidades son: responsable, proactivo, capacidad de trabajo en equipo, resolución de problemas, pensamiento abstracto, organizado...
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -231,7 +231,7 @@
 
         <div class="section-title">
           <h2>Trayectoria</h2>
-          <p>Despues de asentar una base teórica en la univerdad me he centrado en reforzar la parte práctica aprendiendo de cada proyecto que he desarrollado e itentando mantenerme al día. Me gustaría seguir creciendo como profesional, por lo que estoy abierto a nuevos proyectos y experiencias en equipo.</p>
+          <p>Después de asentar una base teórica en la universidad me he centrado en reforzar la parte práctica aprendiendo de cada proyecto que he desarrollado e intentando mantenerme al día. Me gustaría seguir creciendo como profesional, por lo que estoy abierto a nuevos proyectos y experiencias en equipo.</p>
         </div>
 
         <div class="row">
@@ -252,7 +252,7 @@
 	 <h3 class="resume-title">Otros projectos</h3>
             <div class="resume-item pb-0">
               <h4> Opotest </h4>
-              <p><em>Aplicación web para realizar examenes tipo test con soporte para temarios. </em></p>
+              <p><em>Aplicación web para realizar exámenes tipo test con soporte para temarios. </em></p>
               <ul>
                 <li>Adaptable según convocatoria</li>
                 <li>Material desing</li>
