--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <p><em>Universidade de vigo, campus de Ourense</em></p>
               <p>Actualmente sigo cursando este master, dado que lo estoy realizando a tiempo parcial mientras trabajo</p>
             </div>
-	 <h3 class="resume-title">Otros projectos</h3>
+	 <h3 class="resume-title">Otros proyectos</h3>
             <div class="resume-item pb-0">
               <h4> Opotest </h4>
               <p><em>Aplicación web para realizar exámenes tipo test con soporte para temarios. </em></p>
